<resources>
    <string name="app_name">Level4-Task1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="stats">Your all time statistics</string>

    <string name="computer">Computer</string>
    <string name="you">You</string>
    <string name="versus">V.S.</string>

    <!-- Result strings -->
    <string name="result_win">You win!</string>
    <string name="result_lose">You lose!</string>
    <string name="result_draw">Draw</string>

    <string name="view_home">Home</string>
    <string name="view_history">View history</string>
    <string name="your_history">Your Game History</string>

    <!-- Fragment strings -->
    <string name="first_fragment_label">Home Fragment</string>
    <string name="second_fragment_label">History Fragment</string>

</resources>